2012-03-02  MIYAMUKO Katsuyuki

	* (nth-value-or, define-constant): ed:lisp-indent-hook が間違っていたのを修正 (#2)
	Thanks to @youz.

2012-01-10  MIYAMUKO Katsuyuki

	* xl-alexandria 0.0.2 リリース!

2012-01-08  bowbow99

	* (parse-body): interactive 式も取り出せるように変更

2011-12-22  MIYAMUKO Katsuyuki

	* upstream の変更を取り込み

2011-12-21  MIYAMUKO Katsuyuki

	* (symbolicate): 動作していなかったのを修正

2011-11-04  MIYAMUKO Katsuyuki

	* ansify 0.03.00 を利用するようにした
	- ansify:fdefinition を import
	- ansify:defun が (defun (setf foo)) をサポートしたので
	  Alexandria の元のコードに戻した

2011-10-29  MIYAMUKO Katsuyuki

	* xl-alexandria 0.0.1 リリース!

	* (use-alexandria): alexandria パッケージには lisp パッケージと
	衝突するシンボルがある (copy-file と featurep) ので、*scratch* バッファ
	などで簡単に alexandria を use できるように便利関数を追加

	* io.l を動くようにした。
	パフォーマンスを考慮して read-sequence, write-sequence は移植せずに
	xyzzy 専用機能を使って実装した。

	* マクロに ed::lisp-indent-hook を設定した

2011-10-22  MIYAMUKO Katsuyuki

	* xyzzy の format は justification (~<~>) をサポート
	していないので修正

	* simple-type-error が足りなかったので追加

	* ansify のをいろいろ利用するようにした

	* テストを追加

	* copy-file と featurep を上書きしないように shadow した

2011-10-05  MIYAMUKO Katsuyuki

	* typep, subtypep 周り以外はとりあえずだいたい動くようになった

	* テストを修正

2011-10-04  MIYAMUKO Katsuyuki

	* バイトコンパイルしてある程度動くまでとりあえず修正

	* xl-alexandria 作成開始